[package]
name = "oidc-tester-rs"
version = "0.1.0"
authors = ["Tim Howard <timothy.howard@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rust-keycloak = { git = "https://github.com/freetocompute/rust-keycloak", branch = "dev" }
dotenv = "0.15.0"
tokio = { version = "1", features = ["full"] }